2015-10-17  Robert D Vincent <robert.d.vincent@mcgill.ca>
   * Functionality/tags/tag_transform.c: Avoid use of
	safe_compute_transform_from_tags(). It us not absolutely
	required, and its creation of a subprocess seems to consistently
	trigger a fatal error in X11.

2015-09-30  Robert D Vincent <robert.d.vincent@mcgill.ca>
   * User_interface/Include/User_interface_prototypes.h,
     User_interface/event_callbacks/slice_events.c,
     User_interface/widget_instances/merged_interface.c:
	Implement 'R' and 'E' keys for moving blend slider.

   * Documentation/register.1: Add documentation of 'R' and 'E'
	commands.

   * Various: Minor cleanup and doxygen comments.

2015-09-26  Robert D Vincent <robert.d.vincent@mcgill.ca>
   * Documentation/register.1: Correct and expand the man page.

   * User_interface/event_callbacks/slice_events.c: Permit use of
	lower-case characters for commands.

   * User_interface/main/main.c: Minor cleanup and improvements.

   * User_interface/windows/xsect.c: Fix x-axis range so that scaled
	display mode works as intended.

2015-09-25  Robert D Vincent <robert.d.vincent@mcgill.ca
   * Functionality/slices/{create_slice.c, cursor.c, set_volume.c},
	Functionality/tags/objects.c: Fix some memory overwrite errors.

2015-09-24  Robert D Vincent <robert.d.vincent@mcgill.ca
   * User_interface/main/main.c, Functionality/slices/set_volume.c,
	./global_variables.h: Implement -range and -sync command line
	options.

2015-06-03  Robert D Vincent <robert.d.vincent@mcgill.ca>
   * CMakeLists.txt, config.h.cmake, User_interface/main/main.c: Added
	git branch and hash to the version information. Updated version
	to 1.5.0.
   * User_interface/widget_instances/tag_points.c: Eliminated some
	harmless warnings about conversions between int and void *.
   * Functionality/slices/colour_map.c: Just abort if the colour map
	would be unreasonably huge.
   * Functionality/slices/set_volume.c, global_variables.h: Create global